--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "gui/includes/gumbo-parser"]
 	path = gui/includes/gumbo-parser
 	url = https://github.com/google/gumbo-parser
+	ignore = dirty
