--- a/bin/config/brute.ini
+++ b/bin/config/brute.ini
@@ -1,3 +1,15 @@
+[General]
+threads=100
+timeout=3
+record=A
+wildcard=false
+useLevel=false
+maxlevel=0
+noDuplicates=false
+autosaveToProject=false
+nameserver=Google
+nameserverType=custom
+
 [Subdomain-Wordlist]
 Long=/wordlists/subdomain/Long.txt
 Medium=/wordlists/subdomain/Medium.txt
@@ -18,42 +30,31 @@ Generic%20Restricted%20TLD=/wordlists/tld/Generic Restricted TLD.txt
 Generic%20TLD=/wordlists/tld/Generic TLD.txt
 Sponsored%20TLD=/wordlists/tld/Sponsored TLD.txt
 
-[Scan]
-threads=50
-timeout=3
-record=A
-wildcard=0
-level=0
-max%20levels=2
-
-[Result]
-no%20duplicates=0
-autosave%20to%20project=0
-
 [Default-Nameservers]
 Google=8.8.8.8
 Cloudflare=1.1.1.1
 Quad9=9.9.9.9
-Cisco OpenDNS=208.67.222.222
+Cisco%20OpenDNS=208.67.222.222
 DNS.WATCH=84.200.69.80
 Verisign=64.6.64.6
-Comodo Secure DNS=8.26.56.26
-Neustar DNS=64.6.64.6
+Comodo%20Secure%20DNS=8.26.56.26
+Neustar%20DNS=64.6.64.6
 SafeDNS=195.46.39.39
 CleanBrowsing=185.228.168.9
-Alternate DNS=76.76.19.19
+Alternate%20DNS=76.76.19.19
 Yandex.DNS=77.88.8.1
 AdGuard=94.140.14.140
 Dyn=216.146.35.35
 OpenNIC=192.71.245.208
 CyberGhost=38.132.106.139
 puntCAT=109.69.8.51
-Hurricane Electric=74.82.42.42
+Hurricane%20Electric=74.82.42.42
 
 [Custom-Nameservers]
-1\value=8.8.4.4
+1\value=8.8.8.8
 2\value=1.1.1.1
-size=2
+size=1
 
-[Current]
-nameserver=Google
+[Nameservers]
+1\value=8.8.8.8
+size=1
