--- a/bin/config/dns.ini
+++ b/bin/config/dns.ini
@@ -1,8 +1,7 @@
 [General]
-threads=100
-timeout=3
+threads=50
 noDuplicates=false
-autosaveToProject=false
+autosaveToProject=true
 nameserver=Google
 nameserverType=custom
 
