--- a/bin/sub3suite.ini
+++ b/bin/sub3suite.ini
@@ -1,6 +1,14 @@
 [General]
 build_date=2022-02-01
 
+[recent_projects]
+Google=C:/Users/inner peace/Desktop/sub3suite/bin/projects/Google.s3s
+none=none
+
+[dimensions]
+height=695
+width=1043
+
 [enums]
 timeout_asn=1000
 timeout_ip=1000
@@ -10,6 +18,14 @@ timeout_mx=1000
 timeout_ssl=1000
 timeout_email=1000
 timeout_url=1000
+no_duplicates_asn=false
+no_duplicates_ip=false
+no_duplicates_cidr=false
+no_duplicates_ns=false
+no_duplicates_mx=false
+no_duplicates_ssl=false
+no_duplicates_email=false
+no_duplicates_url=false
 autosave_to_Project_asn=false
 autosave_to_Project_ip=false
 autosave_to_Project_cidr=false
@@ -54,7 +70,8 @@ level_scan=false
 max_level=0
 no_duplicates=false
 autosave_to_project=false
-nameserver_type=single
+nameserver_type=custom
+nameserver=AdGuard
 
 [dns]
 threads=50
@@ -136,7 +153,7 @@ puntCAT=109.69.8.51
 Hurricane%20Electric=74.82.42.42
 
 [wordlist_substitutions]
-a=@
+a=@@
 b=8
 e=3
 g=q
@@ -149,104 +166,10 @@ u=v
 v=u
 z=2
 
-[authors]
-Enock%20Nicholaus=3nock@protonmail.com
+[custom_nameservers]
+1\value=8.8.8.8
+size=1
 
-[modules]
-anubis=https://jldc.me/anubis/
-bgpview=https://bgpview.io/
-binaryedge=https://binaryedge.io/
-builtwith=https://builtwith.com/
-c99=https://api.c99.nl/
-circl=https://www.circl.lu/
-dnsbufferoverun=https://dns.bufferover.run/
-dnslytics=https://dnslytics.com/
-domaintools=https://www.domaintools.com/
-fullhunt=https://fullhunt.io/
-github=https://github.com/
-hackertarget=https://hackertarget.com/
-haveibeenpwned=https://haveibeenpwned.com
-host=https://host.io/
-jsonwhois=https://jsonwhois.com/
-leakix=https://leakix.net/
-maltiverse=https://maltiverse.com/
-mnemonic=https://www.mnemonic.no/
-n45ht=https://n45ht.or.id/
-networksdb=https://networksdb.io/
-neutrinoapi=https://www.neutrinoapi.com/
-omnisint=https://omnisint.io/
-onyphe=https://www.onyphe.io/
-otx=https://otx.alienvault.com/
-projectdiscovery=https://chaos.projectdiscovery.io/
-riskiq=https://www.riskiq.com/
-robtex=https://www.robtex.com/
-securitytrails=https://securitytrails.com/
-seon=https://seon.io/
-shodan=https://www.shodan.io/
-spamhaus=https://spamhaus.com/
-spyonweb=https://spyonweb.com/
-spyse=https://spyse.com/
-sublist3r=https://api.sublist3r.com/
-threatbook=https://threatbook.cn/
-threatcrowd=https://www.threatcrowd.org/
-threatminer=https://threatminer.org/
-urlscan=https://urlscan.io/
-viewdns=https://viewdns.info/
-wappalyzer=https://www.wappalyzer.com/
-webresolver=https://webresolver.nl/
-whatcms=https://whatcms.org/
-whoisxmlapi=https://whoisxmlapi.com/
-whoxy=https://www.whoxy.com/
-zetalytics=https://zetalytics.com/
-zoomeye=https://www.zoomeye.org/
-archive-it=https://archive-it.org/
-archivetoday=https://archive.md/
-arquivo=https://arquivo.pt/
-commoncrawl=http://commoncrawl.org/
-webarchive=https://www.webarchive.org.uk/
-waybackmachine=https://archive.org/web/
-censys=https://censys.io/
-certspotter=https://sslmate.com/certspotter/
-crtsh=https://crt.sh
-google-cert=https://transparencyreport.google.com/
-debounce=https://debounce.io/
-emailcrawlr=https://emailcrawlr.com/
-email-format=https://www.email-format.com/
-emailrep=https://emailrep.io/
-hunter=https://hunter.io/
-snov=https://snov.io/
-trumail=https://trumail.io/
-afrinic=https://afrinic.net/
-apnic=https://Apnic.net/
-arin=https://www.arin.net/
-ripe=https://stat.ripe.net/
-ipapi=https://ipapi.com/
-ipdata=https://ipdata.co/
-ipgeolocation=https://ipgeolocation.io/
-ipinfo=https://ipinfo.io/
-ipregistry=https://ipregistry.co/
-ipstack=https://ipstack.com/
-abuseipdb=https://abuseipdb.com/
-botscout=http://botscout.com
-fraudguard=https://fraudguard.io/
-hybrid-analysis=https://www.hybrid-analysis.com/
-ipqualityscore=https://www.ipqualityscore.com/
-leak-lookup=https://leak-lookup.com/
-virustotal=https://www.virustotal.com/
-dnsdumpster=https://dnsdumpster.com/
-netcraft=https://netcraft.com/
-pagesinventory=https://pagesinventory.com/
-pkey=https://pkey.in/
-rapiddns=https://rapiddns.io/
-sitedossier=https://sitedossier.com/
-ask=https://ask.com/
-baidu=https://baidu.com/
-bing=https://bing.com/
-dogpile=https://dogpile.com/
-duckduckgo=https://duckduckgo.com/
-exalead=https://exalead.com/
-yahoo=https://yahoo.com/
-
-[recent_projects]
-
-[donors]
+[nameservers]
+1\value=8.8.8.8
+size=1
