added timeout for dns lookups

--- a/bin/sub3suite.ini
+++ b/bin/sub3suite.ini
@@ -55,8 +55,8 @@ autosave_to_project=false
 
 [active]
 threads=100
-timeout=100
-record=A
+timeout=1000
+record=AAAA
 wildcard_scan=false
 no_duplicates=false
 autosave_to_project=false
@@ -64,6 +64,7 @@ nameserver_type=custom
 
 [brute]
 threads=100
+timeout=1000
 record=ANY
 wildcard_scan=false
 level_scan=false
@@ -74,10 +75,12 @@ nameserver_type=custom
 nameserver=AdGuard
 
 [dns]
-threads=50
+threads=100
+timeout=1000
 no_duplicates=false
-autosave_to_project=true
-nameserver_type=single
+autosave_to_project=false
+nameserver_type=custom
+nameserver=AdGuard
 
 [url]
 threads=50
