added breakpad submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sub3suite/include/gumbo-parser"]
 	path = sub3suite/include/gumbo-parser
 	url = https://github.com/google/gumbo-parser
+[submodule "sub3suite/include/breakpad"]
+	path = sub3suite/include/breakpad
+	url = https://github.com/google/breakpad
