updated compiling instructions

--- a/bin/sub3suite.ini
+++ b/bin/sub3suite.ini
@@ -1,22 +1,23 @@
 [General]
-build_date=2022-02-01
-
-[recent_projects]
-none=none
-
-[dimensions]
-height=695
-width=1043
+build_date=2022-04-03
 
 [enums]
 timeout_asn=1000
 timeout_ip=1000
 timeout_cidr=1000
-timeout_ns=1000
-timeout_mx=1000
+timeout_ns=10000
+timeout_mx=10000
 timeout_ssl=1000
 timeout_email=1000
 timeout_url=1000
+set_timeout_asn=false
+set_timeout_ip=false
+set_timeout_cidr=false
+set_timeout_ns=false
+set_timeout_mx=false
+set_timeout_ssl=false
+set_timeout_email=false
+set_timeout_url=false
 no_duplicates_asn=false
 no_duplicates_ip=false
 no_duplicates_cidr=false
@@ -35,69 +36,74 @@ autosave_to_Project_email=false
 autosave_to_Project_url=false
 
 [osint]
-timeout=100000
+timeout=3000
 max_pages=100
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 
 [raw]
-timeout=10000
+timeout=3000
 max_pages=100
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 
 [ssl]
 threads=100
 timeout=3000
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 
 [active]
 threads=100
-timeout=1000
-record=AAAA
+timeout=3000
+record=A
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 nameserver_type=custom
+nameserver=1Google
 
 [brute]
 threads=100
-timeout=9000
-record=ANY
+timeout=3000
+record=A
+set_timeout=false
 wildcard_scan=false
 no_duplicates=false
 autosave_to_project=false
 nameserver_type=custom
-nameserver=AdGuard
+nameserver=1Google
 
 [dns]
 threads=100
 timeout=3000
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 nameserver_type=custom
-nameserver=AdGuard
+nameserver=1Google
 
 [url]
 threads=100
-timeout=2000
+timeout=3000
+set_timeout=false
 no_duplicates=false
 autosave_to_project=false
 
 [custom_nameservers_brute]
-1\value=216.239.32.10
-2\value=1.1.1.1
-size=2
+1\value=8.8.8.8
+size=1
 
 [custom_nameservers_active]
-1\value=216.239.32.10
-2\value=1.1.1.1
-size=2
+1\value=8.8.8.8
+size=1
 
 [custom_nameservers_dns]
-1\value=216.239.32.10
-2\value=1.1.1.1
-size=2
+1\value=8.8.8.8
+size=1
 
 [nameservers_brute]
 1\value=8.8.8.8
@@ -116,10 +122,6 @@ Long=/wordlists/subdomain/Long.txt
 Medium=/wordlists/subdomain/Medium.txt
 Short=/wordlists/subdomain/Short.txt
 
-[subdomain_special_wordlist]
-Admin=/wordlists/subdomain/Admin.txt
-Test=/wordlists/subdomain/Test.txt
-
 [tld_wordlist]
 Long=/wordlists/tld/Long.txt
 Medium=/wordlists/tld/Medium.txt
@@ -132,7 +134,7 @@ Generic%20TLD=/wordlists/tld/Generic TLD.txt
 Sponsored%20TLD=/wordlists/tld/Sponsored TLD.txt
 
 [default_nameservers]
-Google=8.8.8.8
+1Google=8.8.8.8
 Cloudflare=1.1.1.1
 Quad9=9.9.9.9
 Cisco%20OpenDNS=208.67.222.222
@@ -152,7 +154,7 @@ puntCAT=109.69.8.51
 Hurricane%20Electric=74.82.42.42
 
 [wordlist_substitutions]
-a=@@
+a=@
 b=8
 e=3
 g=q
@@ -164,11 +166,3 @@ s=5
 u=v
 v=u
 z=2
-
-[custom_nameservers]
-1\value=8.8.8.8
-size=1
-
-[nameservers]
-1\value=8.8.8.8
-size=1
