--- a/bin/keys.ini
+++ b/bin/keys.ini
@@ -1,67 +1,67 @@
-bing=
-c99=
+C99=
 censys_id=
 censys_secret=
-certspotter=
-cloudflare=
-github=
-google=
-hunter=
+CertSpotter=
+Github=
+Hunter=
 intelx=
-pentesttools=
-projectdiscovery=
+ProjectDiscovery=
+passivetotal_key=
+passivetotal_username=
 riskiq_key=
-riskiq_username=
-securitytrails=
-shodan=
-spyse=
-threatbook=
-virustotal=
-binaryedge=
-apiinfo=
-ipinfo=
-whoisxmlapi=
-zoomeye=
-ipapi=
-viewdns=
-hackertarget=
-webresolver=
+riskiq_secret=
+SecurityTrails=
+Shodan=
+Spyse=
+ThreatBook=
+VirusTotal=
+BinaryEdge=
+IpInfo=
+WhoIsXMLAPI=
+ZoomEye=
+IpApi=
+ViewDns=
+HackerTarget=
+WebResolver=
 circlUser=
 circlPwd=
-mnemonic=
-robtex=
-otx=
-ipregistry=
-builtwith=
+Mnemonic=
+Robtex=
+Otx=
+IpRegistry=
+BuiltWith=
 detectify=
-dnslytics=
+DNSlytics=
 domaintools_username=
 domaintools_key=
-onyphe=
-fullhunt=
-spamhaus=
-debounce=
-haveibeenpwned=
-host=
-jsonwhois=
-leakix=
-networksdb=
+Onyphe=
+FullHunt=
+SpamHaus=
+Debounce=
+HaveIBeenPawned=
+Host=
+JsonWhois=
+LeakIX=
+NetworksDB=
 neutrinoapi_key=
 neutrinoapi_uid=
-seon=
-spyonweb=
-whatcms=
-whoxy=
-emailcrawlr=
-emailformat=
-emailrep=
-snov=
-ipdata=
-ipgeolocation=
-ipstack=
-abuseipdb=
+Seon=
+SpyOnWeb=
+WhatCMS=
+Whoxy=
+EmailCrawlr=
+EmailFormat=
+EmailRep=
+Snov=
+IpData=
+IpGeoLocation=
+IpStack=
+AbuseIPDB=
 fraudguard_user=
 fraudguard_pass=
-hybridanalysis=
-ipqualityscore=
-leaklookup=
+HybridAnalysis=
+IpQualityScore=
+LeakLookup=
+Wappalyzer=
+ZETAlytics=
+Ipfy=
